# kbv2

./: .env.example  .env.production  .gitignore  AGENTS.md  AVAILABLE_FEATURES_GUIDE.md  CLAUDE.md  COMPREHENSIVE_UPDATE_PLAN_v2.md  CRYPTO_REFACTORING_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOY_STATUS.md  ENTITY_PROCESSING_PIPELINE.md  FINAL_IMPLEMENTATION_PLAN.md  FINAL_PROJECT_REPORT.md  FRONTEND.md  GATEWAY_CONSOLIDATION_REPORT.md  GATEWAY_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN_BTC.md  IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_SUMMARY.md  INGESTION_GUIDE.md  INTEGRATED_CRYPTO_PLAN.md  KBV2_COMPREHENSIVE_ANALYSIS_2026.md  LOGGING_IMPLEMENTATION_SUMMARY.md  OPENAI_CLIENT_MIGRATION_REPORT.md  PROJECT_GUIDE.md  QUICK_START.md  README.md  SELF_IMPROVEMENT_ANALYSIS.md  SELF_IMPROVEMENT_SUMMARY.md  SELF_IMPROVEMENT_USAGE.md  SETUP.md  SPEC.md  VALIDATION_SUMMARY.md  WEBSOCKET_IMPROVEMENTS.md  add_comprehensive_llm_logging.py  add_llm_logging.py  agent_coding_lessons.md  alembic.ini  analyze_doc.py  analyze_ingestion.py  (+70 more)
.claude/: settings.json
.docs/: Comprehensive Analysis Report_v0.md
.p/: KBV2 DETAILED FIX & IMPROVEMENT REPORT.md  session-ses_3d75.md  session-ses_3d76_kbv2.md  task.md  task_v2.md
alembic/: env.py
alembic/versions/: 0002_make_embedding_dynamic.py  0003_upgrade_to_1024_dimensions.py  b20e59aa81e1_add_vector_indexes.py  domain_feedback_001.py  experience_bank_001.py
archive/: CODE_QUALITY_REPORT.md  IMPLEMENTATION_PLAN.md
data/: knowledge_graph.kuzu
docs/: ARCHITECTURE_OPTIONS.md  GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  README.md  TRADING_INTELLIGENCE_SYSTEM_PLAN.md  YOUTUBE_PIPELINE_INTEGRATION.md  api_endpoints.md  configuration_flow.md  data_logic_flow.md  database_schema.md  folder_structure.md  system_architecture_flow.md
docs/api/: endpoints.md
docs/architecture/: KBV2 Knowledge Base System - Comprehensive Architecture Overview.md  design.md  overview.md
docs/archive/: implementation-plan.md
docs/guides/: available_features.md  deployment.md  ingestion.md  self_improvement.md
docs/operations/: environment.md  runbook.md
docs/overview/: IMPLEMENTATION_SUMMARY.md  KBV2_COMPLETE_DOCUMENTATION.md
evaluation/: EVALUATION_FRAMEWORK_2026.md
examples/: community_summaries_example.py  guided_extraction_example.py  search_with_reranking.py
frontend/: .gitignore  README.md  index.html  openapi-schema.json  openapi-ts.config.ts  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx
plans/: REFACTOR_AND_FEATURES_EXECUTION_PLAN.md  btc_trading_kb_implementation_plan_claude_website.md  kbv2_comprehensive_refactoring_plan_kimi.md
research/: RESEARCH_ANALYSIS_2026.md
scripts/: OPERATION_SUMMARY.md  README.md  debug_response.py  dev.sh  final_verification.py  generate_openapi.py  kbv2.service  load_env_for_alembic.py  quick_reference_card.sh  setup_db.py  setup_kbv2.sh  start_backend.sh  start_frontend.sh  start_kbv2_server.sh
test_data/: document_02_quarterly_report.txt  file_b_high_density.txt
testdata/: 2019-07-03_Consolidation_Cheat_Sheet.md  2019-08-21_Head_and_Shoulders_Cheat_Sheet.md  2019-08-21_Trading_Trend_Lines.md  2019-09-04_Parallel_Channels___Rectangles.md  2020-02-12_Open_Interest.md  2020-07-15_Daily_Opens_Cheat_Sheet.md  2020-08-01_Harmonics_Cheat_Sheet.md  breakthrough.txt  clean.txt  clean_cache.txt  cybertruck.txt  falcon_heavy.txt  final.txt  final_complete.txt  final_success.txt  final_victory.txt  final_victory2.txt  full_ollama.txt  pipeline_test.txt  prompts.md  quantum3.txt  quick_test.txt  show_all_stages.txt  simple.txt  simple_doc.txt  starship.txt  success_test.txt  test_final.txt  tiny.txt  tiny_progress.txt  true_e2e.txt  true_final_success.txt  v2.md  v3.md  victory_final.txt  working_test.txt
tests/: conftest.py
(+250 files in other folders)
