[project]
name = "knowledge-base"
version = "0.2.0"
description = "Portable Knowledge Base System with Vector Search, Graph Database, and RAG"
readme = "README.md"
authors = [
    { name = "monjurkuet", email = "muhammad.manjur@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "dateparser>=1.2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0",

    # API
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.25.0",

    # Portable Storage
    "chromadb>=0.5.0",           # Vector store (HNSW, persistent)
    "kuzu>=0.4.0",               # Graph database (embedded, Cypher)

    # LLM & Embeddings
    "openai>=1.3.0",             # OpenAI-compatible API client
    "tenacity>=8.0.0",

    # Document Processing
    "unstructured[md,pdf]>=0.15.0",  # Document parsing
    "pypdf>=4.0.0",              # PDF processing

    # Graph & RAG
    "igraph>=0.11.0",            # Graph algorithms (Leiden)
    "leidenalg>=0.10.0",

    # Text Processing
    "rank-bm25>=0.2.2",          # BM25 implementation
    "sentence-transformers>=3.0.0",  # Embeddings

    # NLP
    "nltk>=3.8.0",

    # Observability
    "logfire>=0.28.0",

    # Async
    "websockets>=16.0",
]

[project.scripts]
knowledge-base = "knowledge_base.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "pytest-cov>=7.0.0",
]

# Optional: sqlite-vec for in-SQLite vector search
# Note: Requires compilation or pip install sqlite-vec
sqlite-vec = [
    "sqlite-vec>=0.1.0",
]

# Optional: DuckDB for analytics
analytics = [
    "duckdb>=1.0.0",
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
warn_unreachable = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
